day-28/system-design/python/src/gateway/maifests/gateway-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  replicas: 2  # Number of desired replicas
  selector:
    matchLabels:
      app: gateway
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: pravesh2003/gateway:latest  # Replace with your gateway service Docker image
          ports:
            - containerPort: 8080  # Port on which your gateway service listens
---
apiVersion: v1
kind: Service
metadata:
  name: gateway

spec:
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 8080  # Port to expose on the service
      targetPort: 8080  # Port on which the container is listening
  type: ClusterIP  # Change the service type as needed (e.g., NodePort, LoadBalancer)
