day-28/system-design/python/src/gateway/maifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  rules:
    - host: mp3convertor.com  # Replace with your domain or hostname
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway  # Name of the backend service
                port:
                  number: 8080       # Port of the backend service
  # Add any other Ingress configuration here, such as TLS, annotations, etc.
